Updated and added Aggregate paage and Architecture.

--- a/workplacesafety/webapps/webdisplay/webdisplay.csproj
+++ b/workplacesafety/webapps/webdisplay/webdisplay.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="aggrdisplay.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -131,6 +132,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="WorkplaceSafetyarch.jpg" />
     <None Include="Properties\PublishProfiles\wswebdisplay - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="objects.aspx" />
@@ -171,6 +173,13 @@
     <Content Include="Site.Mobile.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="aggrdisplay.aspx.cs">
+      <DependentUpon>aggrdisplay.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="aggrdisplay.aspx.designer.cs">
+      <DependentUpon>aggrdisplay.aspx</DependentUpon>
+    </Compile>
     <Compile Include="alert.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="About.aspx.cs">
