--- a/workplacesafety/webapps/webdisplay/bin/webdisplay.dll.config
+++ b/workplacesafety/webapps/webdisplay/bin/webdisplay.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="connsr" value="Server=tcp:dewdbsvr.database.windows.net,1433;Initial Catalog=dewdb;Persist Security Info=False;User ID=sqladmin;Password=Azure!2345;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
+    <add key="connsr" value="Server=tcp:dewdbsvr.database.windows.net,1433;Initial Catalog=dewdb;Persist Security Info=False;User ID=***;Password=****;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />
     <add key="ChartImageHandler" value="storage=file;timeout=20;dir=c:\TempImageFiles\;" />
   </appSettings>
   <system.web>
